--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(27, 26, 29);
+}
+
+p {
+  color: white;
 }
 
 code {
