--- a/frontend/src/TopBar.css
+++ b/frontend/src/TopBar.css
@@ -7,46 +7,53 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 8%;
     z-index: 1000;
+    transition: all 0.3s ease-in-out;
 }
 
 .leftSide {
-    margin-left: 25px;
+    margin-left: 2vw;
+    transition: all 0.3s ease-in-out;
 }
 
 .leftSide h1 {
     color: rgb(218, 218, 218);
-    font-size: 20px;
+    font-size: 3vb;
     font-weight: 800;
+    transition: all 0.3s ease-in-out;
 }
 
 .rightSide {
     display: flex;
     align-items: center;
-    margin: 25px;
-    gap: 0.5rem;
+    margin-right: 2vw;
+    gap: 0.5vw;
+    transition: all 0.3s ease-in-out;
 }
 
 button {
-    border-width: 2.5px;
-    border-radius: 15px;
+    border-width: 0.3vb;
+    border-radius: 1cap;
     border-style: solid;
     cursor: pointer;
-    padding: 5px 5px;
     font-weight: 700;
+    font-size: 1.2vb;
+    transition: all 0.3s ease-in-out;
 }
 
 .HTP {
     background-color: rgba(0, 0, 0, 0);
     color: white;
     border-color: white;
-    font-size: 10px;
+    padding: 0.5vb 0.7vb;
 }
 
 .login {
     background-color: rgb(0, 0, 0);
+    border-color: rgb(0, 0, 0);
     color: white;
-    font-size: 15px;
+    padding: 1vb 1.2vb;
 }
 
 .HTP:hover {
